--- a/notes-app-back-end/package.json
+++ b/notes-app-back-end/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^8.52.0",
+    "eslint": "^8.53.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.0",
     "nodemon": "^3.0.1"
@@ -21,11 +21,12 @@
   "dependencies": {
     "@hapi/hapi": "^21.3.2",
     "@hapi/jwt": "^3.2.0",
+    "amqplib": "^0.10.3",
     "bcrypt": "^5.1.1",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.3.1",
     "joi": "^17.11.0",
     "nanoid": "^3.1.20",
-    "node-pg-migrate": "^7.5.2",
-    "pg": "^8.12.0"
+    "node-pg-migrate": "^6.2.2",
+    "pg": "^8.11.3"
   }
 }
